--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+python/classes_methods/__pycache__
+python/crirestool
+python/.DS_Store
+python/Plots
+python/*files/*processed*
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
