--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ python/.DS_Store
 python/Plots
 python/*files/*processed*
 python/Transit_List.log
-
+python/output1.json
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
