--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 python/classes_methods/__pycache__
 python/classes_methods/__pycache__/*pyc
+# virtual environments
 python/crirestool
+python/venv/
 python/.DS_Store
 python/Plots
 python/*files/*processed*
