--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ python/classes_methods/__pycache__
 python/classes_methods/__pycache__/*pyc
 # virtual environments
 python/crirestool
-python/venv/
+python/venv
 python/.DS_Store
 python/Plots
 python/*files/*processed*
